--- a/public/css/home/present.css
+++ b/public/css/home/present.css
@@ -129,7 +129,7 @@
 	height: .56rem;
 	line-height: .54rem;
 	text-align: center;
-	margin: .15rem auto 0;
+	/* margin: .15rem auto 0; */
 	border: .01rem solid #407ffe;
 	border-radius: .05rem;
 	background: #224ddd;
@@ -164,6 +164,7 @@
 	-webkit-justify-content: space-between;
 	justify-content: space-between;
 }
+
 /* 下拉菜单-e*/
 .popover{
 	display: none;
@@ -247,3 +248,89 @@
 .true{
 	border-right: .01rem solid #66cc;
 }
+
+/* 000 */
+/*复投弹框-s*/
+.voting{
+	display: none;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	/*padding: 0 .2rem;*/
+	left: 0;
+	top: 0;
+	background: rgba(0,0,0,.5);
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+}
+.voting .voting_content{
+	color: #f5f5f5;
+	/*position: relative;*/
+	/*height: auto;*/
+	/*padding-bottom: 1rem;*/
+	line-height: .75rem;
+	/*margin-top: 2rem;*/
+	text-align: center;
+	background: #404786;
+	border-radius: .1rem;
+	padding-top: 0.3rem;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	width: 90%;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	margin: auto;
+	height: calc(100vh - 150px);
+	padding-right: 0.3rem; 
+}
+.voting_box span{font-size: 0.3rem;}
+.voting_box{width: 100%; float: right;}
+.voting .voting_content input::-webkit-input-placeholder{font-family: 'PingFangMedium'; color: #f5f5f5;font-size: 0.28rem;letter-spacing: 0.02rem;}
+.voting .voting_content input{
+	margin-left: .1rem;
+	/*background: #f5f5f5;*/
+	/*height: 0.6rem;
+	line-height: 0.6rem;*/
+	width: 60%;
+	font-size: 0.28rem;
+	padding-left: 0.05rem;
+	background: transparent;
+	border-bottom: 1px solid #f5f5f5;
+	color: #f5f5f5;
+}
+.lj_p_address input{width: 62% !important;}
+.voting .voting_content input:nth-child(6){
+	color: #f5f5f5;
+	background: transparent;
+}
+.voting .voting_affirm{
+	display: -webkit-box;
+	display: -moz-box;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flexbox;
+	display: flex;
+	width: 100%;
+	height: 1rem;
+	line-height: 1rem;
+	border-top: .01rem solid #66cc;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+.voting .voting_affirm span{
+	display: block;
+	float: left;
+	margin: 0 auto;
+	width: 49%;
+	text-align: center;
+}
+.true{
+	border-right: .01rem solid #66cc;
+}
+/* 复投弹框-e */
