--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -83,7 +83,7 @@
 						<!-- 提取按钮 -->
 					<div class="currency_box">
 						<a class="currency_btn" onclick="send({$v.uid},{$v.cu_id})">提取</a>
-						<a class="currency_btn" >复投</a>
+						<a class="currency_btn" onclick="voting()">复投</a>
 					 </div> 
 					</div>
 				</div>
@@ -139,9 +139,19 @@
 								</div>
 								<div class="popover_box clearfix">
 									<div class="lj_p_address">
-										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span> 地址:</span><input type="text" name="wallet_addr" id="wallet_addr" value=""  /><br />
-										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span>备注:</span><input class="lj_input2" type="text" name="note"  />
+										<h2> 地址:</h2><input type="text" name="wallet_addr" id="wallet_addr" value=""  />
 									</div>
+									<div class="lj_p_address">
+										<h2>备注:</h2><input class="lj_input2" type="text" name="note"  />
+									</div>
+									<div class="lj_p_address">
+										<h2>验证码:</h2>
+										<input class="lj_input3" type="text" name="note"  />
+										<button class="btn">获取验证码</button>
+									</div>
+									
+											
+									
 								</div>
 								<!--000-->
 								
@@ -157,20 +167,33 @@
 				<div class="voting">
 					<div class="voting_content">
 						<form class="form-horizontal" id="handleposition" method="post" onsubmit="return false;">
-							<div class="voting_box clearfix">
-									<span>请选择投币类型:</span>
-									<select name="type">
-											<option value ="0">请选择</option>	
-											<option value ="1">本金</option>
-											<option value ="2">静态收益</option>
-											<option value ="3">动态收益</option>
-											<option value ="4">分红</option>		
-									</select>	
-							</div>
+								<div class="popover_box clearfix">
+										<span>请选择提币类型:</span>
+										<span class="popover_click">请选择</span>
+										<!-- <select name="type">
+												<option value ="0">请选择</option>	
+												<option value ="1">本金</option>
+												<option value ="2">静态收益</option>
+												<option value ="3">动态收益</option>
+												<option value ="4">分红</option>	
+										</select> -->
+										<ul class="ul_box">
+											<li>本金</li>
+											<li>静态收益</li>
+											<li>动态收益</li>
+											<li>分红</li>
+										</ul>
+								</div>
 							<div class="voting_box clearfix">										
 								<span>投入额度:</span> <input id="voting_num" name="number" type="number" placeholder="请输入额度" /><br />
 								<span>转成美金:</span> <input id="voting_convert" name="voting_convert" type="number" readonly  />
-							</div>			
+							</div>	
+							<div>
+									&nbsp;&nbsp;<span>验证码:</span>
+								<input class="lj_input3" type="text" name="note"  />
+								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn">获取验证码</button>
+							</div>	
+							</div>		
 							<div class="voting_affirm">
 								<span class="true">复投</span>
 								<span class="false">取消</span>
