--- a/public/css/home/present.css
+++ b/public/css/home/present.css
@@ -173,7 +173,7 @@
 
 /* 下拉菜单-e*/
 .popover{
-	display: none;
+	display: block;
 	width: 100%;
 	height: 100%;
 	position: fixed;
@@ -195,7 +195,7 @@
 	text-align: center;
 	background: #404786;
 	border-radius: .1rem;
-	padding-top: 0.3rem;
+	padding-top: 0.1rem;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -226,7 +226,12 @@
 	border-bottom: 1px solid #f5f5f5;
 	color: #f5f5f5;
 }
-.lj_p_address input{width: 62% !important;}
+/* .lj_p_address{float: right;} */
+.lj_address2{float:right;}
+
+/* .lj_p_address p{display: flex;justify-content: flex-start;} */
+.lj_p_address h2{width: 27%;text-align: right;font-size: 0.3rem;float: left;}
+.lj_p_address input{width: 62% !important;margin-right:5.5%;}
 .popover .popover_content input:nth-child(6){
 	color: #f5f5f5;
 	background: transparent;
@@ -311,11 +316,18 @@
 	border-bottom: 1px solid #f5f5f5;
 	color: #f5f5f5;
 }
+
+.lj_p_address .lj_input3{
+	position: relative;
+}
+
+.currency_wrap .lj_address2 .lj_input3{width:32% !important;margin-left:0 ;}
 .lj_p_address input{width: 62% !important;}
 .voting .voting_content input:nth-child(6){
 	color: #f5f5f5;
 	background: transparent;
 }
+
 .voting .voting_affirm{
 	display: -webkit-box;
 	display: -moz-box;
@@ -370,10 +382,16 @@
 .popover_box span{display: inline-block}
 .popover_box ul {z-index: 1000; display: none;   width: 30%;position: absolute;left: 54%;background: #142a5d;border-radius: 0.09rem; }
 .popover_box ul li{font-size: 0.3rem;color: #000;border-bottom: 1px solid #c4c4c4; color:#fff}
-.popover_box ul li:hover{background: #5a62af;color: #fff}
+.popover_box usl li:hover{background: #5a62af;color: #fff}
 .popover_box ul li:last-child{border-bottom: none}
 
 
+.btn{
+	 border:0;
+	 border-radius:.1rem;	
+	 padding:.1rem;
+	 position: absolute;
+	 top:1.43rem;
+	 right: 0.4rem;
+}
 
-
-ul_box
