--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -247,13 +247,15 @@
 						<tr>
 							<th>日期</th>
 							<th>币种</th>
-							<th>总数量</th>
+							<th>数量</th>
+							<th>状态</th>
 						</tr>
 						{foreach name="user_order" item="vo"}
 						<tr>
 							<td>{$vo.create_time|date="Ymd",###}</td>
 							<td>{$vo.cu_name}</td>
 							<td>{$vo.num}</td>
+							<td>{if condition="$vo.is_check eq 1"}已审核{else /}待审核{/if}</td>
 						</tr>
 						{/foreach}
         			</table>
