修改投资部分模块-发票上传

--- a/application/admin/view/income_info.html
+++ b/application/admin/view/income_info.html
@@ -90,7 +90,7 @@
             var url= jq(this).data('id');
             layer.open({
                 type:1,
-                content:'<img src="url">',
+                content:'<img src='+url+'>',
                 time:5000,
                 closeBtn:1,
 
