--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -16,6 +16,7 @@
 	</head>
 
 	<body>
+	
 		<!-- 最大的外套 -->
 		<div class="currency_wrap">
 			<!-- 头部-s -->
@@ -49,17 +50,18 @@
 						<!-- 商品名称 -->
 						<div class="currency_name">
 							<div class="currency_name_text">
-								{$v.note}
+								{$v.name}
 							</div>
 							</div>
 							<!-- 商品数量 -->
 							<div class="currency_num">
-									{$v.cu_num+$v.static_wallet+$v.dynamic_wallet+$v.rate_wallet}
+								{$v.cu_num+$v.static_wallet+$v.dynamic_wallet+$v.rate_wallet}
 							</div>
 							<!-- 下拉菜单 -->
 							<div class="pull_down">
 								<img src="__PUBLIC__/images/pull-down.png">
 							</div>
+
 						</div>
 					<!-- 默认显示-e -->
 					<!-- 下拉菜单内容 -->
@@ -69,12 +71,8 @@
 							<p>{$v.cu_num}</p>
 						</div>
 						<div class="down_list">
-							<p>静态收益</p>
-							<p>{$v.static_wallet}</p>
-						</div>
-						<div class="down_list">
-							<p>动态收益</p>
-							<p>{$v.dynamic_wallet}</p>
+							<p>收益</p>
+							<p>{$v.bonus_wallet}</p>
 						</div>
 						<div class="down_list">
 							<p>分红</p>
@@ -84,27 +82,26 @@
 						<div class="currency_btn" onclick="send({$v.uid},{$v.cu_id})">	
 								提取
 						</div>
+
 					</div>
 				</div>
 					{/foreach}
 					<!-- 列表项 -e -->
-				
+
 				<!-- 提取弹框-s -->
 				<div class="popover">
 						<div class="popover_content">
-							<form class="form-horizontal" id="handleposition" method="post" onsubmit="return false;">
+							<form class="form-horizontal" id="handleposition" method="post" enctype="multipart/form-data" onsubmit="return false;">
 								<div class="popover_box clearfix">
 										<span>请选择提币类型:</span>
-										
 										<select name="type">
 												<option value ="0">请选择</option>	
 												<option value ="1">本金</option>
-												<option value ="2">静态收益</option>
-												<option value ="3">动态收益</option>
-												<option value ="4">分红</option>
+												<option value ="2">奖金钱包</option>
+												<option value ="3">收益</option>
+												<!-- <option value ="4">分红</option> -->
 											
-										</select>
-										
+										</select>	
 								</div>
 
 								<div class="popover_box clearfix">
@@ -112,11 +109,12 @@
 										<input type="hidden" name="cu_id" id="cu_id" value="">
 										<!-- 本金 -->
 										<input type="hidden" name="cu_num" id="cu_num" value="">
-										<input type="hidden" name="static_wallet" id="static_wallet" value="">
-										<input type="hidden" name="dynamic_wallet" id="dynamic_wallet" value="">
+										<input type="hidden" name="bonus_wallet" id="bonus_wallet" value="">
+										<!-- <input type="hidden" name="static_wallet" id="static_wallet" value="">
+										<input type="hidden" name="dynamic_wallet" id="dynamic_wallet" value=""> -->
 										<input type="hidden" name="rate_wallet" id="rate_wallet" value="">							
-									<span>提取额度:</span> <input id="popover_num" name="number" type="number" placeholder="请输入额度" /><br />
-									<span>转成美金:</span> <input id="popover_convert" name="popover_convert" type="number" readonly  />
+									<span>提取额度:</span> <input id="popover_num" name="number" type="number" placeholder="请输入额度(大于50美金才可提)" /><br />
+									<input id="popover_convert" name="popover_convert" type="text" readonly  />
 								</div>
 								<!--000-->
 								<div class="popover_box clearfix">
@@ -129,12 +127,12 @@
 										<!--上传图片 tyle='file'-->
 										<a class="uploadFile2" href=" ">选择图片</a>
 										<input class="uploadFile" type="file" onchange="UpLoad(this,1)" name="file" id="" value="1" accept="image/*"  />
-					
 									</div>
 								</div>
+								<input type="text" id="preViewImg">
 								<div class="popover_box clearfix">
 									<div class="lj_p_address">
-										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span> 地址:</span><input type="text" name="wallet_addr" id="wallet_addr" value=""  /><br />
+										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span> 地址:</span><input type="text" name="wallet_addr" id="wallet_addr"/><br />
 										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span>备注:</span><input class="lj_input2" type="text" name="note"  />
 									</div>
 								</div>
@@ -185,8 +183,8 @@
 								// $('#popover_convert').val(data.result);
 								$('#cu_id').val(data['result']['cu_id']);
 								$('#cu_num').val(data['result']['cu_num']);
-								$('#static_wallet').val(data['result']['static_wallet']);
-								$('#dynamic_wallet').val(data['result']['dynamic_wallet']);
+								// $('#static_wallet').val(data['result']['static_wallet']);
+								$('#bonus_wallet').val(data['result']['bonus_wallet']);
 								$('#rate_wallet').val(data['result']['rate_wallet']);
 								$('#wallet_addr').val(data['result']['wallet_addr']);								
 								$('.popover').show();
@@ -266,25 +264,25 @@
 														
 							}else if(data.status == 2){
 								layer.msg(data.msg, {icon: 2, time: 2000}, function(){					
-								// window.location.reload(); 
+								window.location.reload(); 
 								});
 							}else if(data.status == 3){
 								layer.msg(data.msg, {icon: 2, time: 2000}, function(){					
-								// window.location.reload(); 
+								window.location.reload(); 
 								});
 							}
 							else {
 									// layer.msg(data.msg, {icon: 2, anim: 0, time: 2000});
 									layer.msg(data.msg, {icon: 2, time: 2000}, function(){					
-									// window.location.reload(); 
+									window.location.reload(); 
 									});
 										// window.location.reload(); 
 							}
 						});
 			});			
-			// jq('.false').click(function(){	  
-			// 	window.location.reload();
-			// });		
+			jq('.false').click(function(){	  
+				window.location.reload();
+			});		
 			$(document).on("keyup",'#popover_num',function(){
 				var val=$(this).val();
 				var cu_id=$('#cu_id').val();
@@ -346,26 +344,42 @@
 									ctx.drawImage(this, 0, 0, canvas.width, canvas.height);
 									var newImageData = canvas.toDataURL(fileType, 0.8); //重新生成图片
 									/* 图片 回显*/
-									// that.siblings(".preViewImg").attr("src", newImageData);
+									that.siblings(".preViewImg").attr("src", newImageData);
 									console.log(newImageData);
 
 									$("#canvas").hide();
 								}
 							} else {
-								//创建一个image对象，给canvas绘制使用 
-								image.onload = function() {
-									/*图片 回显 */
-									// that.siblings(".preViewImg").attr("src", result);
-									console.log(result);
-								}
+								          //创建一个image对象，给canvas绘制使用 
+								          image.onload = function() {
+								            $.ajax({
+								              url: '/index/index/upload',
+								              type: 'post',
+								              dataType: 'json',
+								              data: {dataImg:image.src},
+								              success:function(msg){
+								                if(msg.code==200){
+								                  $('#preViewImg').val(msg.imgUrl);
+								                  $('.text').html('成功');
+								                  // console.log(msg);
+								                  layer.msg(msg.msg)
+								                }else{
+								                  $('.text').html('失败');
+								                  layer.msg(msg.msg)
+								                  return false;
+								                }
+								              }
+								            });
+								            /*图片 回显 */
+								            dataImg = result;
+											}
 							}
-							
-							/*ajax=> 回显图片*/
-							that.siblings(".preViewImg").attr("src", result);
+							// /*ajax=> 回显图片*/
+							// that.siblings(".preViewImg").attr("src", result);
 
 							
 						}
-					} else {
+					}else {
 						alert("请选择图片");
 					}
 
