--- a/application/index/view/index_index.html
+++ b/application/index/view/index_index.html
@@ -17,13 +17,13 @@
         <div class="swiper-container banner-wrap-zp">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="__PUBLIC__/images/home/banner-img01.jpg"  />
+                    <img src="__PUBLIC__/images/home/banner01.png"  />
                 </div>
                 <div class="swiper-slide">
-                    <img src="__PUBLIC__/images/home/banner-img01.jpg"  />
+                    <img src="__PUBLIC__/images/home/banner02.png"  />
                 </div>
                 <div class="swiper-slide">
-                    <img src="__PUBLIC__/images/home/banner-img01.jpg"  />
+                    <img src="__PUBLIC__/images/home/banner03.png"  />
                 </div>
             </div>
             <div class="swiper-pagination"></div>
