--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -69,13 +69,13 @@
 							<p>{$v.cu_num}</p>
 						</div>
 						<div class="down_list">
-							<p>静态收益</p>
-							<p>{$v.static_wallet}</p>
+							<p>收益</p>
+							<p>{$v.bonus_wallet}</p>
 						</div>
-						<div class="down_list">
+						<!-- <div class="down_list">
 							<p>动态收益</p>
 							<p>{$v.dynamic_wallet}</p>
-						</div>
+						</div> -->
 						<div class="down_list">
 							<p>分红</p>
 							<p>{$v.rate_wallet}</p>
@@ -105,10 +105,10 @@
 												<option value ="4">分红</option>	
 										</select> -->
 										<ul class="ul_box">
-											<li>本金</li>
-											<li>静态收益</li>
-											<li>动态收益</li>
-											<li>分红</li>
+											<li data-index="0">请选择</li>
+											<li data-index="1">本金</li>
+											<li data-index="2">收益</li>
+											<li data-index="3">分红</li>
 										</ul>
 								</div>
 
@@ -117,8 +117,8 @@
 										<input type="hidden" name="cu_id" id="cu_id" value="">
 										<!-- 本金 -->
 										<input type="hidden" name="cu_num" id="cu_num" value="">
-										<input type="hidden" name="static_wallet" id="static_wallet" value="">
-										<input type="hidden" name="dynamic_wallet" id="dynamic_wallet" value="">
+										<input type="hidden" name="bonus_wallet" id="bonus_wallet" value="">
+										<!-- <input type="hidden" name="dynamic_wallet" id="dynamic_wallet" value=""> -->
 										<input type="hidden" name="rate_wallet" id="rate_wallet" value="">							
 									<span>提取额度:</span> <input id="popover_num" name="number" type="number" placeholder="小于50美金可提取" /><br />
 									<span>转成美金:</span> <input id="popover_convert" name="popover_convert" type="number" readonly  />
@@ -144,11 +144,11 @@
 									<div class="lj_p_address">
 										<h2>备注:</h2><input class="lj_input2" type="text" name="note"  />
 									</div>
-									<div class="lj_p_address">
+									<!-- <div class="lj_p_address">
 										<h2>验证码:</h2>
 										<input class="lj_input3" type="text" name="note"  />
 										<button class="btn">获取验证码</button>
-									</div>
+									</div> -->
 									
 											
 									
@@ -221,8 +221,12 @@
 					$(".ul_box").slideToggle("slow");
 				});
 				$(".ul_box>li").click(function(){
+				
 					var $li = $(this).html();
+					var index =$(this).attr("data-index")
+					console.log(index)
 					$(".popover_click").html($li)
+					$(".popover_click").attr("data-id",index)
 				})
 			})
 
@@ -240,8 +244,8 @@
 								// $('#popover_convert').val(data.result);
 								$('#cu_id').val(data['result']['cu_id']);
 								$('#cu_num').val(data['result']['cu_num']);
-								$('#static_wallet').val(data['result']['static_wallet']);
-								$('#dynamic_wallet').val(data['result']['dynamic_wallet']);
+								$('#bonus_wallet').val(data['result']['bonus_wallet']);
+								// $('#dynamic_wallet').val(data['result']['dynamic_wallet']);
 								$('#rate_wallet').val(data['result']['rate_wallet']);
 								$('#wallet_addr').val(data['result']['wallet_addr']);								
 								$('.popover').show();
@@ -312,9 +316,12 @@
 			var layer = layui.layer
 			, form = layui.form
 			,jq = layui.jquery;
-			jq('.true').click(function(){	  
+			jq('.true').click(function(){	 
+				   
+				    var val = $(".popover_click").attr("data-id") 
+					// console.log($('#handleposition').serialize())
 					var url = "{:url('Index/pick')}";
-					var datas =  $('#handleposition').serialize();
+					var datas =  $('#handleposition').serialize()+'&type='+val;
 					jq.getJSON(url,datas,function(data){						
 							if (data.status == 1) {
 									layer.msg(data.msg, {icon: 1, time: 2000}, function(){					
@@ -388,7 +395,8 @@
 						var fileReader = new FileReader();
 						fileReader.readAsDataURL(f);
 						fileReader.onload = function(event) {
-							var result = event.target.result; //返回的dataURL   
+							var result = event.target.result; //返回的dataURL 
+							// console.log(result);  
 							var image = new Image();
 							image.src = result;
 							console.log(2222)
@@ -412,13 +420,30 @@
 								//创建一个image对象，给canvas绘制使用 
 								image.onload = function() {
 									/*图片 回显 */
-									// that.siblings(".preViewImg").attr("src", result);
-									console.log(result);
-								}
-							}
-							
+									    $.ajax({
+							              url: '/index/index/upload',
+							              type: 'post',
+							              dataType: 'json',
+							              data: {dataImg:image.src},
+							              success:function(msg){
+							                if(msg.code==200){
+							                  $('#imgUrl_id').val(msg.imgUrl);
+							                  $('.text').html('成功');
+							                  // console.log(msg);
+							                  layer.msg(msg.msg)
+							                }else{
+							                  $('.text').html('失败');
+							                  layer.msg(msg.msg)
+							                  return false;
+							                }
+							              }
+							            });							
 							/*ajax=> 回显图片*/
 							that.siblings(".preViewImg").attr("src", result);
+								}
+							}				
+							/*ajax=> 回显图片*/
+							// that.siblings(".preViewImg").attr("src", result);
 
 							
 						}
