--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -97,18 +97,12 @@
 								<div class="popover_box clearfix">
 										<span>请选择提币类型:</span>
 										<span class="popover_click">请选择</span>
-										<!-- <select name="type">
-												<option value ="0">请选择</option>	
-												<option value ="1">本金</option>
-												<option value ="2">静态收益</option>
-												<option value ="3">动态收益</option>
-												<option value ="4">分红</option>	
-										</select> -->
+										
 										<ul class="ul_box">
-											<li>本金</li>
-											<li>静态收益</li>
-											<li>动态收益</li>
-											<li>分红</li>
+											<li data-val="1">本金</li>
+											<li data-val="2">静态收益</li>
+											<li data-val="3">动态收益</li>
+											<li data-val="4">分红</li>
 										</ul>
 								</div>
 
@@ -128,7 +122,7 @@
 									<!-- '创建一个image对象'，给canvas绘制使用 -->
 									<canvas id="canvas" style="display: none;"></canvas>
 									<div class="imageEchoBox">
-										<span class="tipsText" style="font-size: 0.2rem !important;">请点击“选中图片”上传二维码。</span>
+										<span class="tipsText" style="font-size: 0.2rem !important;">请点击“选择图片”上传二维码。</span>
 										<!--回显的图片-->
 										<img class="preViewImg" style="display: none;" src="" onerror="javascript:this.src='__PUBLIC__/plugins/layui/images/loading-2.gif'"/>
 										<!--上传图片 tyle='file'-->
@@ -149,11 +143,9 @@
 										<input class="lj_input3" type="text" name="note"  />
 										<button class="btn">获取验证码</button>
 									</div>
-									
-											
-									
 								</div>
 								<!--000-->
+								
 								
 								<div class="popover_affirm">
 									<span class="true">提取</span>
@@ -167,33 +159,42 @@
 				<div class="voting">
 					<div class="voting_content">
 						<form class="form-horizontal" id="handleposition" method="post" onsubmit="return false;">
-								<div class="popover_box clearfix">
-										<span>请选择提币类型:</span>
-										<span class="popover_click">请选择</span>
-										<!-- <select name="type">
-												<option value ="0">请选择</option>	
-												<option value ="1">本金</option>
-												<option value ="2">静态收益</option>
-												<option value ="3">动态收益</option>
-												<option value ="4">分红</option>	
-										</select> -->
-										<ul class="ul_box">
-											<li>本金</li>
-											<li>静态收益</li>
-											<li>动态收益</li>
-											<li>分红</li>
-										</ul>
-								</div>
-							<div class="voting_box clearfix">										
-								<span>投入额度:</span> <input id="voting_num" name="number" type="number" placeholder="请输入额度" /><br />
+							<div class="voting_box clearfix">
+									<span>请选择投入类型:</span>
+									<span class="voting_click">请选择</span>
+									
+									<ul class="ul_box">
+										<li data-val="1">本金</li>
+										<li data-val="2">静态收益</li>
+										<li data-val="3">动态收益</li>
+										<li data-val="4">分红</li>
+									</ul>
+							</div>
+					
+							<div class="voting_box clearfix">
+									<input type="hidden" name="uid" id="uid" value="{$uid}">
+									<input type="hidden" name="cu_id" id="cu_id" value="">
+									<!-- 本金 -->
+									<input type="hidden" name="cu_num" id="cu_num" value="">
+									<input type="hidden" name="static_wallet" id="static_wallet" value="">
+									<input type="hidden" name="dynamic_wallet" id="dynamic_wallet" value="">
+									<input type="hidden" name="rate_wallet" id="rate_wallet" value="">							
+								<span>提取额度:</span> <input id="voting_num" name="number" type="number"  /><br />
 								<span>转成美金:</span> <input id="voting_convert" name="voting_convert" type="number" readonly  />
-							</div>	
-							<div>
-									&nbsp;&nbsp;<span>验证码:</span>
-								<input class="lj_input3" type="text" name="note"  />
-								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn">获取验证码</button>
-							</div>	
-							</div>		
+							</div>
+							<!--000-->
+							
+							<div class="voting_box clearfix">
+							
+								<div class="lj_p_address">
+									<h2>验证码:</h2>
+									<input class="lj_input3" type="text" name="note"  />
+									<button class="btn">获取验证码</button>
+								</div>
+							</div>
+							<!--000-->
+							
+							
 							<div class="voting_affirm">
 								<span class="true">复投</span>
 								<span class="false">取消</span>
@@ -217,12 +218,16 @@
 			}
 			//提取按钮
 			$(function(){
-				$(".popover_click").click(function(){
+				$(".popover_click,.voting_click").click(function(){
 					$(".ul_box").slideToggle("slow");
 				});
 				$(".ul_box>li").click(function(){
 					var $li = $(this).html();
-					$(".popover_click").html($li)
+					$(".ul_box").slideToggle();
+					$(".popover_click").html($li);
+					$(".voting_click").html($li);
+				    
+					
 				})
 			})
 
