--- a/application/admin/view/currency_index.html
+++ b/application/admin/view/currency_index.html
@@ -27,7 +27,7 @@
                         <th>币种名称</th>
                         <th>币种简称</th>
                         <th>状态</th>
-                        <th>钱包地址</th>
+                        <th style="width: 100px">钱包地址</th>
                         <th>当前价格(CNY)</th>
                         <th>钱包二维码</th>
                         <th>备注信息</th>
@@ -38,14 +38,14 @@
                     {foreach name="currencyData" item="vo" key="num"}
                     <tr>
                         <td>{$i++}</td>
-                        <td>{if condition="$vo['log'] eq true"}<img src="/{$vo['log']}" alt="111">{else /} {/if}
+                        <td>{if condition="$vo['log'] eq true"}{if is_file($vo['log'])}<img src="/{$vo['log']}" alt="111">{/if}{else /} {/if}
                         </td>
                         <td>{$vo.name}</td>
                         <td>{$vo.alias_name}</td>
                         <td>{if condition="$vo['status'] eq 1"}<a href="{:url('admin/currency/status',['id'=>$vo['id']])}">显示</a>{else /}<a href="{:url('admin/currency/status',['id'=>$vo['id']])}">隐藏</a> {/if}
-                        <td>{$vo.wallet_addr}</td>
+                        <td  style="width: 100px">{$vo.wallet_addr}</td>
                         <td>{$vo.price}</td>
-                        <td>{if condition="$vo['wallet_qrcode'] eq true"}<img src="/{$vo['wallet_qrcode']}" alt="111">{else /} {/if}
+                        <td>{if condition="$vo['wallet_qrcode'] eq true"}{if is_file($vo['wallet_qrcode'])}<img src="/{$vo['wallet_qrcode']}" alt="111">{/if}{else /} {/if}
                         </td>
                         <td>{$vo.note}</td>
                         <td>
