--- a/application/admin/view/currency_add.html
+++ b/application/admin/view/currency_add.html
@@ -21,7 +21,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">币种价格</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="price" required lay-verify="required" placeholder="请输入币种价格" class="layui-input txt">
+                        <input type="text" name="price" required lay-verify="required" placeholder="请输入币种价格" class="layui-input txt" oninput = "value=value.replace(/[^\d]/g,'')">
                     </div>
                 </div>
                 <div class="layui-form-item">
@@ -39,7 +39,7 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">币种二维码</label>
                     <div class="layui-input-inline">
-                        <input type="file" name="cu_qrcode" id="file1"  onchange="checkFileExt(this.value)">
+                        <input type="file" name="wallet_qrcode" id="file1"  onchange="checkFile(this.value)">
                     </div>
                 </div>
                 <div class="layui-form-item">
@@ -75,6 +75,11 @@
         var file=$("#file");
         if($.trim(file.val())==''){
             alert("请选择文件");
+            return false;
+        }
+        var file=$("#file1");
+        if($.trim(file.val())==''){
+            alert("请上传二维码");
             return false;
         }
         var text=$(".txt");
@@ -115,6 +120,28 @@
         if(!flag) {
             alert("文件名不符合");
             var obj=document.getElementById('file');
+            obj.outerHTML=obj.outerHTML;
+        }
+
+    }
+    function checkFile(filename)
+    {
+        var flag = false; //状态
+        var arr = ["jpg","png","gif"];
+        //取出上传文件的扩展名
+        var index = filename.lastIndexOf(".");
+        var ext = filename.substr(index+1);
+        //循环比较
+        for(var i=0;i<arr.length;i++) {
+            if(ext == arr[i]) {
+                flag = true; //一旦找到合适的，立即退出循环
+                break;
+            }
+        }
+        //条件判断
+        if(!flag) {
+            alert("文件名不符合");
+            var obj=document.getElementById('file1');
             obj.outerHTML=obj.outerHTML;
         }
 
