--- a/application/admin/view/currency_edit.html
+++ b/application/admin/view/currency_edit.html
@@ -39,9 +39,11 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">币种二维码</label>
                     <div class="layui-input-inline">
-                        <input type="file" name="cu_qrcode" id="file1" onchange="checkFileExt2(this.value)">
-                        {if $res['log'] eq true}
-                            <img src="/{$res['wallet_addr']}" alt="111" style="width: 100px;height: 100px">
+                        <input type="file" name="wallet_qrcode" id="file1" onchange="checkFile(this.value)">
+                        {if $res['wallet_qrcode'] eq true}
+                        {if is_file($res['wallet_qrcode'])}
+                            <img src="/{$res['wallet_qrcode']}" alt="111" style="width: 100px;height: 100px">
+                        {/if}
                         {else /}
                         {/if}
                     </div>
@@ -51,7 +53,9 @@
                     <div class="layui-input-inline">
                         <input type="file" name="log" id="file" onchange="checkFileExt(this.value)">
                         {if $res['log'] eq true}
+                        {if is_file($res['log']) eq true}
                             <img src="/{$res['log']}" alt="111" style="width: 100px;height: 100px">
+                        {/if}
                         {else /}
                         {/if}
                     </div>
@@ -122,7 +126,7 @@
 
     }
 
-    function checkFileExt1(filename)
+    function checkFile(filename)
     {
         var flag = false; //状态
         var arr = ["jpg","png","gif"];
@@ -139,7 +143,7 @@
         //条件判断
         if(!flag) {
             alert("文件名不符合");
-            var obj=document.getElementById('file');
+            var obj=document.getElementById('file1');
             obj.outerHTML=obj.outerHTML;
         }
 
