--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -139,8 +139,8 @@
 							</div>
 						</div>
 				
-
-					<div class="sum">投资</div>
+<!-- 		s-click="2"=> 防止重复点击			 -->
+					<div class="sum" has-click="2">投资</div>
 					<!--选择币值-弹框-->
 
 					<div class="shadow-wrap">
