--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -171,7 +171,7 @@
 					<div class="voting_content">
 						<form class="form-horizontal" id="handleposition" method="post" onsubmit="return false;">
 							<div class="voting_box clearfix">
-									<span>请选择投入类型:</span>
+									<span>请选择复投类型:</span>
 									<span class="voting_click">请选择</span>
 									
 									<ul class="ul_box voting_ul">
@@ -198,7 +198,7 @@
 							<div class="voting_box clearfix">
 							
 								<div class="lj_p_address">
-									<h2>验证码:</h2>
+									<h2>手机验证码:</h2>
 									<input class="lj_input3" type="text" name="note"  />
 									<button class="btn">获取验证码</button>
 								</div>
