--- a/public/css/my/upIDCardNew.css
+++ b/public/css/my/upIDCardNew.css
@@ -16,3 +16,5 @@
 
 .decideToSell{width: 100%;margin: 0 auto;margin-bottom: 1rem;}
 .decideToSell p{letter-spacing: 0.02rem; font-size: 0.3rem; background: #f5f5f5;color: #000;padding: 0.2rem 0;text-align: center;border-radius: 0.1rem;display: block;}
+.preViewImg {display: none;}
+.preViewImg_show {display: block;}
